fix: restringe CORS para origens permitidas em producao
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>